javascript/image-carousel/styles/stylesheet.css
* {
  box-sizing: border-box;
  text-align: center;
}

h1 {
  font-size: 2rem;
  font-weight: bold;
  padding: 20px;
}

a {
  text-decoration: none;
  color: black;
}

a:hover {
  color: darkblue;
}

#no-js {
  padding-top: 20px;
  text-align: center;
}

img {
  position: absolute;
  top: 0; left: 0; right: 0;
  height: 80vh;
  border-bottom: 8px solid transparent;
  margin: 0 auto;
}

#carousel {
  position: relative;
  width: 70vw;
  height: 80vh;
  margin: auto;
  border: 4px solid black;
  background-color: whitesmoke;
}

.arrow-container {
  position: absolute;
  top: 0;
  height: 100%;
  width: 8%;
  z-index: 1000;
}

.arrow-container, .dot {
  background-color: hsla(240, 100%, 30%, 0.2);
}

.arrow-container:hover, div[class="dot"]:hover {
  background-color: hsla(240, 100%, 30%, 0.4);
}

#left {
  left: 0;
}

#right {
  right: 0;
}

.arrow {
  display: inline-block;
  border-top: 20px solid transparent;
  border-right: 20px solid hsla(240, 30%, 100%, 0.6);
  border-bottom: 20px solid transparent;
  width: 20px;
  height: 20px;
  margin: auto;
  position: absolute;
  top: 0; right: 0; bottom: 0; left: 0;
}

#right .arrow {
  transform: rotate(180deg); /* setting border-left instead of border-right gives uneven diagonal edges in FF for some reason */
}


.slide {
  position: absolute;
  width: 100%;
  height: 100%;
}

.selected {
  z-index: 100;
}

/* pre-jquery */
section[class|="slide"] {
  display: none;
}

section h1 {
  display: none
}

section:hover h1 {
  display: block;
  position: absolute;
  z-index: 1000;
  left: 0; right: 0;
  margin: auto;
  font-weight: normal;
  color: hsla(0, 100%, 100%, 0.7);
  text-shadow: 0 0 3px hsla(240, 100%, 0%, 0.5);
}

.dot {
  background-clip: padding-box;
  display: inline-block;
  border-radius: 50%;
  width: 30px;
  height: 30px;
  border: 10px solid transparent;
}

.current {
  background-color: hsla(240, 100%, 30%, 0.6);
}

